corpus/source_files.txt
============================================
Comments
============================================

// foo

----

(source_file
  (comment))


============================================
Variables
============================================

foo bar.1.2.3

----

(source_file
  (variable
    (name)
    (value)))



============================================
Include
============================================

#include "*/*.proj"

----

(source_file
  (include
    (string)))


============================================
Con
============================================

con foo
{
}

----

(source_file
  (definition
    (definition_type)
    (target)
    (block)))


============================================
Use
============================================

con foo
{
  use bar
}

----

(source_file
  (definition
    (definition_type)
    (target)
    (block
      (use_statement
        (target)))))



============================================
Variable in block
============================================

workspace foo
{
  compiler_match foo_bar_baz
}

----

(source_file
  (definition
    (definition_type)
    (target)
    (block
      (variable
        (name)
        (value)))))



============================================
Conditional definition
============================================

con(ENABLE_FOO) foo
{
}

----

(source_file
  (definition
    (definition_type (condition))
    (target)
    (block)))
